--- a/.github/workflows/mono.yml
+++ b/.github/workflows/mono.yml
@@ -42,7 +42,7 @@ jobs:
 
       # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
-        id: mono-glue-cache
+        id: mono-glue-sqlite-cache
         uses: actions/cache@v2
         with:
           path: ${{github.workspace}}/.scons_cache/
