--- a/.github/workflows/mono.yml
+++ b/.github/workflows/mono.yml
@@ -99,7 +99,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: godotengine/godot
-          ref: 3.x
+          ref: master
 
       # Clone our module under the correct directory
       - uses: actions/checkout@v2
@@ -185,7 +185,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: godotengine/godot
-          ref: 3.x
+          ref: master
 
       # Clone our module under the correct directory
       - uses: actions/checkout@v2
