Use linuxbsd path.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -85,5 +85,5 @@ jobs:
       # Make build available
       - uses: actions/upload-artifact@v2
         with:
-          name: godot.x11.opt.tools.64
-          path: bin/godot.x11.opt.tools.64
+          name: godot.linuxbsd.opt.tools.64
+          path: bin/godot.linuxbsd.opt.tools.64
