--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,7 +22,7 @@ jobs:
       # Clone Godot
       - uses: actions/checkout@v2
         with:
-          repository: godotengine/godot
+          repository: v-sekai/godot
           ref: master
 
       # Clone our module under the correct directory
@@ -88,7 +88,7 @@ jobs:
       # Clone Godot
       - uses: actions/checkout@v2
         with:
-          repository: godotengine/godot
+          repository: v-sekai/godot
           ref: master
 
       # Clone our module under the correct directory
