--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: v-sekai/godot
-          ref: master
+          ref: groups-4.x
 
       # Clone our module under the correct directory
       - uses: actions/checkout@v2
@@ -89,7 +89,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: v-sekai/godot
-          ref: master
+          ref: groups-4.x
 
       # Clone our module under the correct directory
       - uses: actions/checkout@v2
