--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -74,7 +74,7 @@ jobs:
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons -j2 verbose=yes warnings=all werror=yes platform=linuxbsd tools=yes tests=no target=release_debug production=yes
+          scons -j2 verbose=yes warnings=all werror=yes platform=linuxbsd tests=no target=editor production=yes
 
       # TODO Such tests are able to run from Godot 4.0 only
       # Execute unit tests for the editor
